[package]
name = "cg_req"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
hyper = { version = "0.14.26", features = ["client", "http1"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
rust_decimal = { version = "1.29.1", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
env_logger = "0.11.5"
log = "0.4.22"
dotenvy = "0.15.7"
